eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/Funciones.build.log
18:40:56 **** Incremental Build of configuration Debug for project Funciones ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Genericas.o "..\\Genericas.c" 
In file included from ..\Genericas.c:10:0:
..\Genericas.h:23:25: error: array type has incomplete element type 'struct estructurasRecibidas'
 int cargarStruct(struct estructurasRecibidas[],int espacioLibre);
                         ^~~~~~~~~~~~~~~~~~~~
..\Genericas.h:23:25: warning: 'struct estructurasRecibidas' declared inside parameter list will not be visible outside of this definition or declaration
..\Genericas.c:41:24: error: unknown type name 'estructurasRecibidas'
 int inicializarStruct( estructurasRecibidas[],int limiteStruct){
                        ^~~~~~~~~~~~~~~~~~~~
..\Genericas.c:55:25: error: array type has incomplete element type 'struct estructurasRecibidas'
 int cargarStruct(struct estructurasRecibidas[],int espacioLibre){
                         ^~~~~~~~~~~~~~~~~~~~
..\Genericas.c:55:25: warning: 'struct estructurasRecibidas' declared inside parameter list will not be visible outside of this definition or declaration
..\Genericas.c: In function 'cargarStruct':
..\Genericas.c:55:25: error: parameter name omitted
..\Genericas.c:65:5: error: 'estructurasRecibidas' undeclared (first use in this function)
  if(estructurasRecibidas!=NULL){
     ^~~~~~~~~~~~~~~~~~~~
..\Genericas.c:65:5: note: each undeclared identifier is reported only once for each function it appears in
..\Genericas.c:105:3: warning: implicit declaration of function 'strncpy' [-Wimplicit-function-declaration]
   strncpy(estructurasRecibidas[espacioLibre].apellido,auxApellido,sizeof(estructurasRecibidas[espacioLibre].apellido));
   ^~~~~~~
..\Genericas.c:105:3: warning: incompatible implicit declaration of built-in function 'strncpy'
..\Genericas.c:105:3: note: include '<string.h>' or provide a declaration of 'strncpy'
..\Genericas.c: In function 'buscarVacio':
..\Genericas.c:114:26: warning: comparison between pointer and integer
   if(estructurasRecibidas!=NULL){
                          ^~
..\Genericas.c:117:28: error: subscripted value is neither array nor pointer nor vector
     if(estructurasRecibidas[i].estaVacio==1){
                            ^
..\Genericas.c: In function 'cargarStruct':
..\Genericas.c:124:2: error: expected declaration or statement at end of input
  }
  ^
..\Genericas.c:57:6: warning: variable 'retorno' set but not used [-Wunused-but-set-variable]
  int retorno;
      ^~~~~~~
..\Genericas.c:124:2: warning: control reaches end of non-void function [-Wreturn-type]
  }
  ^
At top level:
..\Genericas.c:108:6: warning: 'buscarVacio' defined but not used [-Wunused-function]
  int buscarVacio(int estructurasRecibidas,int limiteStruct ){
      ^~~~~~~~~~~

18:40:56 Build Failed. 7 errors, 8 warnings. (took 598ms)

